@@ -49,6 +49,7 @@ depth: 1
  * Restore ability to perform JSONField query operations against StreamField when running against the Django 4.2 development branch (Sage Abdullah)
  * Ensure there is correct grammar and pluralisation for Tab error counts shown to screen readers (Aman Pandey)
  * Pass through expected expected `cc`, `bcc` and `reply_to` to the Django mail helper from `wagtail.admin.mail.send_mail` (Ben Gosney)
+ * Allow reviewing or reverting to a Page's initial revision (Andy Chosak)
 
 ### Documentation
 
